CORSO_CONTAINER_MICROSERVIZI/progetto container musiclab/musiclab-microservices k8s/11-songs-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: songs-service
  namespace: musiclab
  labels:
    app: songs-service
spec:
  replicas: 1   # scalabile con: kubectl scale deploy/songs-service -n musiclab --replicas=N
  selector:
    matchLabels:
      app: songs-service
  template:
    metadata:
      labels:
        app: songs-service
    spec:
      # initContainers:
      #   - name: wait-for-rabbitmq
      #     image: busybox:1.36
      #     command: ["sh", "-c", "until nc -z rabbitmq 5672; do echo waiting for rabbitmq; sleep 2; done"]
      containers:
        - name: songs-service
          image: localhost:5000/musiclab/songs-service:1.0.0
          ports:
            - containerPort: 4001
          volumeMounts:
            - name: songs-data
              mountPath: /app/data
          # readinessProbe:
          #   httpGet:
          #     path: /health
          #     port: 8000
          #   initialDelaySeconds: 5
          #   periodSeconds: 10
          # livenessProbe:
          #   httpGet:
          #     path: /health
          #     port: 8000
          #   initialDelaySeconds: 10
          #   periodSeconds: 20
      volumes:
        - name: songs-data
          persistentVolumeClaim:
            claimName: songs-data
---
apiVersion: v1
kind: Service
metadata:
  name: songs-service
  namespace: musiclab
spec:
  selector:
    app: songs-service
  ports:
    - port: 8000
      targetPort: 8000
