CORSO_CONTAINER_MICROSERVIZI/progetto container musiclab/musiclab-microservices k8s/12-playlist-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playlist-service
  namespace: musiclab
  labels:
    app: playlist-service
spec:
  replicas: 1   # scalabile con: kubectl scale deploy/playlist-service -n musiclab --replicas=N
  selector:
    matchLabels:
      app: playlist-service
  template:
    metadata:
      labels:
        app: playlist-service
    spec:
      containers:
        - name: playlist-service
          image: localhost:5000/musiclab/playlist-service:1.0.0
          ports:
            - containerPort: 8001
          volumeMounts:
            - name: playlist-data
              mountPath: /app/data
          readinessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 10
            periodSeconds: 20
      volumes:
        - name: playlist-data
          persistentVolumeClaim:
            claimName: playlist-data
---
apiVersion: v1
kind: Service
metadata:
  name: playlist-service
  namespace: musiclab
spec:
  selector:
    app: playlist-service
  ports:
    - port: 8001
      targetPort: 8001
