CORSO_CONTAINER_MICROSERVIZI/progetto container musiclab/musiclab-microservices k8s/14-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: musiclab
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: localhost:5000/musiclab/frontend:1.0.0
          ports:
            - containerPort: 80
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: musiclab
spec:
  selector:
    app: frontend
  ports:
    - port: 8888
      targetPort: 80
  # Per test rapidi senza Ingress, puoi cambiare type in NodePort/LoadBalancer.
  type: ClusterIP
